--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -17,7 +17,9 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span>  Login</a>
+            <!--<a class="nav-link" [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span>  Login</a>-->
+            <a class="nav-link" href="https://test-sdc.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=7342nq8oeb2ao2e33pk17bh1q2&redirect_uri=https://d4p2fyeb90av.cloudfront.net/index.html"><span class="glyphicon glyphicon-log-in"></span>  Login</a>
+            
           </li>
     </ul>
   </div>
