Complete webportal code

--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,9 +1,3 @@
-<div class="container">
-    <br>
-    <br>
-    <h1>SDC</h1>
-    <p>
-            The Secure Data Commons is an initiative by The US Department of Transportation for allowing controlled access to data for analysis.<br>
-            It provides an online portal where you can perform data analytics on transportation-related datasets.
-    </p>
+<div class="text-center">
+    <img src="../../assets/images/background.png" class="mx-auto d-block">
 </div>
