--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -1,12 +1,3 @@
-<div class="container">
-    <br><br>
-    <h1><b>S</b>ECURE</h1>
-    <h1><b>D</b>ATA</h1>
-    <h1><b>C</b>OMMONS</h1>
-    <br><br>
-    <ul style="font-size:20px">
-        <li>Data Analytics platform</li>
-        <li>Operate on government datasets</li>
-        <li>Bring your own tools or use ours</li>
-    </ul>
+<div class="col-md-2">
+    <img src="../../assets/images/background-home.png" class="mx-auto d-block">
 </div>
