--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -1,17 +1,17 @@
-<div class="bg user-home-font">
+<div class="bg account-font">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand brand-name navbar-left">
-          <img class="img-responsive2" src="../assets/images/dot-logo.png" alt="Logo"> SDC
+          <img class="img-responsive2" src="../assets/images/dot-logo.svg" alt="Logo"> SDC
         </a>
       </div>
       <ul class="nav navbar-nav">
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" [routerLink]="['/home']">My account</a>
+          <a class="nav-link" [routerLink]="['/account/myaccount']">My account</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['/home/settings']">Settings</a>
+          <a class="nav-link" [routerLink]="['/account/settings']">Settings</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
