--- a/webportal/webapp/src/app/account/myaccount/myaccount.component.css
+++ b/webportal/webapp/src/app/account/myaccount/myaccount.component.css
@@ -5,3 +5,7 @@
   .ng-invalid:not(form)  {
     border-left: 5px solid #a94442; /* red */
   }
+
+  .selected-row {
+    background-color: #8a878770;
+  }
