--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -1,15 +1,15 @@
-<div class="bg main-font">
+<div class="main-font">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand brand-name navbar-left">
-        <img class="img-responsive2" src="../assets/images/dot-logo.png" alt="Logo">
+        <img class="img-responsive2" src="../assets/images/dot-logo.svg" alt="Logo">
         SDC
       </a>
     </div>
     <ul class="nav navbar-nav">
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-        <a class="nav-link" [routerLink]="['/']">Home</a>
+        <a class="nav-link" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" [routerLink]="['/about']">About</a>
@@ -17,10 +17,8 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item" [routerLinkActive]="['active']">
-            <!--<a class="nav-link" [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span>  Login</a>-->
-            <a class="nav-link" href="https://test-sdc.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=7342nq8oeb2ao2e33pk17bh1q2&redirect_uri=https://d4p2fyeb90av.cloudfront.net/index.html"><span class="glyphicon glyphicon-log-in"></span>  Login</a>
-            
-          </li>
+            <a class="nav-link login-btn" (click)="userLogin()"><span class="glyphicon glyphicon-log-in"></span>  Login</a>
+        </li>
     </ul>
   </div>
 </nav>
