--- a/webportal/webapp/src/app/account/account.component.css
+++ b/webportal/webapp/src/app/account/account.component.css
@@ -1,6 +1,6 @@
-.navbar .nav > li > a {
-    line-height: 50px;
-  }
+/*.navbar .nav > li > a {*/
+    /*line-height: 50px;*/
+  /*}*/
 
 .logout-btn {
     cursor: pointer
