--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,3 +1,62 @@
-<div class="text-center">
-    <img src="../../assets/images/background.png" class="mx-auto d-block">
+<!--<div class="text-center">-->
+    <!--<img src="../../assets/images/background.png" class="mx-auto d-block">-->
+<!--</div>-->
+
+<div class="container">
+    <!--<mat-card>-->
+    <div class="infoDiv">
+        <p>Welcome to the Secure Data Commons Platform (SDC), a sandbox environment in AWS managed by U.S. Department of
+            transportation. SDC platform provides a collaborative environment for traffic engineer, researchers, data scientists and
+            all those who are interested in carrying out research and analysis on different datasets related to traffic, weather,
+            crash etc.
+        </p>
+        <p>
+            Ready to Get Started? Follow the steps below or directly jump to any of the sections that you wish to access.
+            SDC Users will have the following access in the platform:
+        </p>
+    </div>
+    <div>
+        <div class="row" style="padding-top: 50px;">
+            <div class="col-md-5">
+                <mat-card style="height: 125px">
+                    <mat-card-subtitle class="matTitle">Curated and published datasets</mat-card-subtitle>
+                    <mat-card-content class="matContent">Check out the list of currently available
+                        datasets (curated, published), data
+                        dictionaries owned by you and others
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <mat-card style="height: 125px">
+                    <mat-card-subtitle class="matTitle">Access to workstations with programming tools</mat-card-subtitle>
+                    <mat-card-content class="matContent">Learn more about how you can bring your
+                        algorithms and code to the SDC platform
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 50px;">
+            <div class="col-md-5">
+                <mat-card style="height: 125px">
+                    <mat-card-subtitle class="matTitle">Publish derived datasets and analysis</mat-card-subtitle>
+                    <mat-card-content class="matContent">Learn more about how you can publish
+                        your analysis and research
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <mat-card style="height: 125px">
+                    <mat-card-subtitle class="matTitle">Access to workstations with programming tools</mat-card-subtitle>
+                    <mat-card-content class="matContent">Access the workstations assigned to you, if
+                        you have requested as part of the
+                        registration process
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+
+    <!--</mat-card>-->
 </div>
