--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -1,3 +1,5 @@
-<div class="col-md-2">
-    <img src="../../assets/images/background-home.png" class="mx-auto d-block">
+<div class="container">
+    <div class="row">
+    <img style="width: 100%" src="../../assets/images/background-home.png" class="mx-auto d-block">
+    </div>
 </div>
