--- a/webportal/webapp/src/app/main/main.component.css
+++ b/webportal/webapp/src/app/main/main.component.css
@@ -1,10 +1,10 @@
-.navbar .nav > li > a {
-    line-height: 50px;
-  }
+/*.navbar .nav > li > a {*/
+    /*line-height: 50px;*/
+  /*}*/
 
-html,body {
-    height:100%;
-  }
+/*html,body {*/
+    /*height:100%;*/
+  /*}*/
 
   .login-btn {
     cursor: pointer
