--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -1,26 +1,36 @@
-<div class="bg account-font">
-  <nav class="navbar navbar-default">
+<div>
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand brand-name navbar-left">
-          <img class="img-responsive2" src="../assets/images/dot-logo.svg" alt="Logo"> SDC
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header col-md-4">
+        <a class="brand-name" style="width: 15%;float: left;margin: 5px 0;">
+          <img style="height: 50px;" class="img-responsive2" src="../assets/images/dot-logo.svg" alt="Logo">
         </a>
+        <div style=" float: left;width: 85%;padding: 10px 20px;">
+          <span>U.S. Department of Transportation</span><br/>
+          <span style="font-weight: 700;">Secure Data Commons Platform</span>
+        </div>
       </div>
-      <ul class="nav navbar-nav">
-        <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" [routerLink]="['/account/myaccount']">My account</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['/account/settings']">Settings</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link logout-btn" (click)="userLogout()">
-              <span class="glyphicon glyphicon-log-out"></span> Logout</a>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="col-md-8" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+            <a class="nav-link"  [routerLink]="['/account/myaccount']">Home</a>
           </li>
-      </ul>
-    </div>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" [routerLink]="['/account/settings']">Datasets</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" [routerLink]="['/account/workstation']">Workstations</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" (click)="userLogout()">Logout</a>
+          </li>
+
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
   </nav>
   <router-outlet></router-outlet>
 </div>
