--- a/webportal/webapp/src/styles.css
+++ b/webportal/webapp/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+@import '~bootstrap/dist/css/bootstrap.css';
+body { padding-top: 70px; }
+
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: rgba(0,0,0,.87);
+    background-color: #f8f8f8 !important;
+    border-bottom: solid 2px #319bf5;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: black;
+    /*margin-left: 50px;*/
+    padding-top:19px;
+    padding-bottom:19px;
+}
