--- a/webportal/webapp/src/app/account/myaccount/myaccount.component.css
+++ b/webportal/webapp/src/app/account/myaccount/myaccount.component.css
@@ -9,3 +9,23 @@
   .selected-row {
     background-color: #8a878770;
   }
+
+
+.infoDiv{
+  text-align: left;
+  padding-top: 85px;
+  font-size: 15px;
+  color: #536576;
+}
+
+.matContent {
+  text-align: left;
+  font-size: 15px;
+  color: #536576;
+}
+.matTitle {
+  font-style: italic;
+  text-align: left;
+  font-size: 15px;
+  color: #536576;
+}
