--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -16,7 +16,7 @@
       <div class="col-md-8" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link"  [routerLink]="['/account/myaccount']">Home</a>
+            <a class="nav-link"  [routerLink]="['/account/accounthome']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/account/settings']">Datasets</a>
