--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -19,7 +19,7 @@
             <a class="nav-link"  [routerLink]="['/account/accounthome']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/account/settings']">Datasets</a>
+            <a class="nav-link" [routerLink]="['/account/datasets']">Datasets</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/account/workstation']">Workstations</a>
