Fit image on about page

--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <img src="../../assets/images/background.png" class="mx-auto d-block">
+            <img style="width: 100%" src="../../assets/images/background.png" class="mx-auto d-block">
         </div>
     </div>
 
-    <div class="row" style="padding-top: 50px;">
+    <div class="row" style="padding-top: 25px;">
         <div class="col-md-4">
             <mat-card class="card">
                 <mat-card-title>About SDC</mat-card-title>
