--- a/webportal/webapp/src/styles.css
+++ b/webportal/webapp/src/styles.css
@@ -5,17 +5,23 @@
 body { padding-top: 70px; }
 
 
+.navbar-default {
+    background: rgb(21, 35, 80) !important;
+    color: #f8f8f8 !important;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #f8f8f8 !important;
+    padding-top:19px;
+    padding-bottom:19px;
+}
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: rgba(0,0,0,.87);
-    background-color: #f8f8f8 !important;
-    border-bottom: solid 2px #319bf5;
+    color: #f8f8f8 !important;
+    border-bottom: solid 2px #f8f8f8;
+    background-color: rgb(21, 35, 80) !important;
+    font-weight: 700 !important;
 }
-
-.navbar-default .navbar-nav > li > a {
-    color: black;
-    /*margin-left: 50px;*/
-    padding-top:19px;
-    padding-bottom:19px;
+.container {
+    padding-top: 25px;
 }
