--- a/webportal/webapp/src/app/account/workstation/workstation.component.css
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.css
@@ -9,3 +9,10 @@
 .selected-row {
     background-color: #8a878770;
 }
+
+.dotBtn {
+    color: #fff;
+    background-color: #2279a6 !important;
+    border-color: #288dc1 !important;
+    width: 60%;
+}
