--- a/webportal/webapp/src/styles.css
+++ b/webportal/webapp/src/styles.css
@@ -25,3 +25,8 @@ body { padding-top: 70px; }
 .container {
     padding-top: 25px;
 }
+.iconFont {
+    color: #337ab7;
+    margin-left: 15px;
+    cursor: pointer;
+}
