--- a/webportal/webapp/src/app/account/accounthome/accounthome.component.html
+++ b/webportal/webapp/src/app/account/accounthome/accounthome.component.html
@@ -14,40 +14,30 @@
     <div class="row" style="padding-top: 50px;">
       <div class="col-md-5">
         <mat-card style="height: 125px">
-          <mat-card-subtitle class="matTitle">Curated and published datasets</mat-card-subtitle>
-          <mat-card-content class="matContent">Check out the list of currently available
-            datasets (curated, published), data
-            dictionaries owned by you and others
-          </mat-card-content>
+          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp; Curated and published datasets</mat-card-subtitle>
+          <mat-card-content class="matContent">Check out the list of currently available datasets (curated, published), data dictionaries owned by you and others</mat-card-content>
         </mat-card>
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-5">
         <mat-card style="height: 125px">
-          <mat-card-subtitle class="matTitle">Access to workstations with programming tools</mat-card-subtitle>
-          <mat-card-content class="matContent">Learn more about how you can bring your
-            algorithms and code to the SDC platform
-          </mat-card-content>
+          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Access to workstations with programming tools</mat-card-subtitle>
+          <mat-card-content class="matContent">Access the workstations assigned to you, if you have requested as part of the registration process </mat-card-content>
         </mat-card>
       </div>
     </div>
     <div class="row" style="padding-top: 50px;">
       <div class="col-md-5">
         <mat-card style="height: 125px">
-          <mat-card-subtitle class="matTitle">Publish derived datasets and analysis</mat-card-subtitle>
-          <mat-card-content class="matContent">Learn more about how you can publish
-            your analysis and research
-          </mat-card-content>
+          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Bring their own algorithms / code</mat-card-subtitle>
+          <mat-card-content class="matContent">Learn more about how you can bring your algorithms and code to the SDC platform</mat-card-content>
         </mat-card>
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-5">
         <mat-card style="height: 125px">
-          <mat-card-subtitle class="matTitle">Access to workstations with programming tools</mat-card-subtitle>
-          <mat-card-content class="matContent">Access the workstations assigned to you, if
-            you have requested as part of the
-            registration process
-          </mat-card-content>
+          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Publish derived datasets and analysis</mat-card-subtitle>
+          <mat-card-content class="matContent">Learn more about how you can publish your analysis and research </mat-card-content>
         </mat-card>
       </div>
     </div>
