Add card on workstation page

--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -7,6 +7,7 @@
 </div>
 
 <div class="container">
+  <mat-card>
     <div class="row">
       <h3>My Datasets</h3>
       <table class="table">
@@ -36,4 +37,5 @@
         </tbody>
       </table>
     </div>
+  </mat-card>
 </div>
