--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -7,8 +7,8 @@
           <img style="margin-top: 8px;" class="img-responsive2" src="../assets/images/dot-logo-white.png" alt="Logo">
         </a>
         <div style=" float: left;width: 85%;padding: 10px 0px;margin-left: -15px">
-          <span style="font-weight: 700;">Secure Data Commons Platform</span><br/>
-          <span style="font-size: 12px;">U.S. Department of Transportation</span>
+          <span style="font-weight: 700;">U.S. Department of Transportation</span><br/>
+          <span style="font-size: 12px;">Secure Data Commons Platform</span>
         </div>
       </div>
 
