text change as per new comments

--- a/webportal/webapp/src/app/account/accounthome/accounthome.component.css
+++ b/webportal/webapp/src/app/account/accounthome/accounthome.component.css
@@ -14,8 +14,8 @@
 .infoDiv{
   text-align: left;
   padding-top: 25px;
-  font-size: 15px;
-  color: #536576;
+  font-size: 16px;
+  color: rgb(52, 73, 95);
 }
 
 .matContent {
