--- a/webportal/webapp/src/app/account/accounthome/accounthome.component.html
+++ b/webportal/webapp/src/app/account/accounthome/accounthome.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="infoDiv">
     <p>Welcome to the Secure Data Commons Platform (SDC), a sandbox environment in AWS managed by U.S. Department of
-      transportation. SDC platform provides a collaborative environment for traffic engineer, researchers, data scientists and
-      all those who are interested in carrying out research and analysis on different datasets related to traffic, weather,
-      crash etc.
+      transportation. The SDC platform provides a collaborative environment for traffic engineers, researchers, data scientists and
+      anyone who is interested in carrying out research and analysis on different datasets related to traffic, weather,
+      crashes etc.
     </p>
     <p>
       Ready to Get Started? Follow the steps below or directly jump to any of the sections that you wish to access.
@@ -29,7 +29,7 @@
     <div class="row" style="padding-top: 50px;">
       <div class="col-md-5">
         <mat-card style="height: 125px">
-          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Bring their own algorithms / code</mat-card-subtitle>
+          <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Bring your own algorithms / code</mat-card-subtitle>
           <mat-card-content class="matContent">Learn more about how you can bring your algorithms and code to the SDC platform</mat-card-content>
         </mat-card>
       </div>
@@ -37,7 +37,7 @@
       <div class="col-md-5">
         <mat-card style="height: 125px">
           <mat-card-subtitle class="matTitle"><img src="../../assets/images/point.png"> &nbsp;Publish derived datasets and analysis</mat-card-subtitle>
-          <mat-card-content class="matContent">Learn more about how you can publish your analysis and research </mat-card-content>
+          <mat-card-content class="matContent">Learn more about how you can publish your analyses and share your research with others</mat-card-content>
         </mat-card>
       </div>
     </div>
