--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -9,8 +9,8 @@
         <div class="col-md-4">
             <mat-card class="card">
                 <mat-card-title>About SDC</mat-card-title>
-                <mat-card-content class="cardContent">The Secure Data Commons is a online portal
-                    where you can perform data analysis on
+                <mat-card-content class="cardContent">The Secure Data Commons is an online portal
+                    where you can perform data analysis on a growing number of
                     transportation-related data sets.
                 </mat-card-content>
                 <mat-card-actions>
