--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -22,10 +22,10 @@
             <a class="nav-link" [routerLink]="['/account/datasets']">DATASETS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/account/workstation']">WORKSTATIONS</a>
+            <a class="nav-link" [routerLink]="['/account/workstation']">WORKSTATIONS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" style="cursor: pointer" (click)="userLogout()">Logout</a>
+            <a class="nav-link" style="cursor: pointer" (click)="userLogout()">LOGOUT</a>
           </li>
 
         </ul>
