Add new background image on home page

--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <img style="width: 100%" src="../../assets/images/background.png" class="mx-auto d-block">
+        <div class="col-md-12" style="margin-top: -15px">
+            <img style="width: 100%" src="../../assets/images/background_about.jpg" class="mx-auto d-block">
         </div>
     </div>
 
-    <div class="row" style="padding-top: 25px;">
+    <div class="row" style="padding-top: 15px;">
         <div class="col-md-4">
             <mat-card class="card">
-                <mat-card-title>About SDC</mat-card-title>
+                <mat-card-title class="cardTitle">About SDC</mat-card-title>
                 <mat-card-content class="cardContent">The Secure Data Commons is an online portal
                     where you can perform data analysis on a growing number of
                     transportation-related data sets.
@@ -22,7 +22,7 @@
         </div>
         <div class="col-md-4">
             <mat-card class="card">
-                <mat-card-title>Datasets</mat-card-title>
+                <mat-card-title class="cardTitle">Datasets</mat-card-title>
                 <mat-card-content class="cardContent">Check out the list of current datasets that
                     are available on SDC platform and learn how
                     to get access to those datasets
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-4">
             <mat-card class="card">
-                <mat-card-title>Sign up</mat-card-title>
+                <mat-card-title class="cardTitle">Sign up</mat-card-title>
                 <mat-card-content class="cardContent">What to get started? Complete our online
                     access request form and when you are
                     approved you can begin creating your very
