--- a/webportal/webapp/src/app/main/about/about.component.css
+++ b/webportal/webapp/src/app/main/about/about.component.css
@@ -3,11 +3,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -20px;
 }
 .card {
-    height: 215px;
+    height: 180px;
     background-color: #f8f8f8;
+    margin-bottom: 10px;
 }
 .cardContent {
     height: 80px;
+}
+.cardTitle {
+    margin-top: -15px !important;
 }
