Add footer to webportal

--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12" style="margin-top: -15px">
+        <div class="col-md-12">
             <img style="width: 100%" src="../../assets/images/background_about.jpg" class="mx-auto d-block">
         </div>
     </div>
@@ -51,6 +51,4 @@
         </div>
     </div>
 </div>
-
-
 
