--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -29,4 +29,19 @@
     </div><!-- /.container-fluid -->
   </nav>
   <router-outlet></router-outlet>
+
+  <!--footer-->
+  <div class="container-fluid">
+    <div class="row padding-top-lg">
+      <div id="footerInfo" class="padding-top-sm">
+        <div class="footerLogo">
+          <img src="../assets/images/dot-logo-white.png" alt="DOT Logo" style="margin-top: 25px;">
+          <span style="font-weight: 700;font-size: 14px">U.S. Department of Transportation</span>
+        </div>
+        <p class="font-13" style="margin-top: -18px;margin-left: 8px;">Secure Data Commons Platform</p>
+        <p class="font-13">The SDC platform was created as a prototype as part of a U.S. DOT research project under contract number DTFH6116D00052 / Task 12</p>
+      </div>
+      </div>
+  </div>
+
 </div>
