SDC Access request form

--- a/webportal/webapp/src/app/main/register/register.component.css
+++ b/webportal/webapp/src/app/main/register/register.component.css
@@ -72,6 +72,7 @@
 .accessLink {
     font-size: 20px;
     cursor: pointer;
+    text-decoration: underline !important;
 }
 #wrapper {
     width: 100%;
