--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -15,7 +15,9 @@
           we will send you an email with the instructions for
           accessing the platform.</p>
 
-        <span class="accessLink"><a>Access Request Form</a></span>
+        <span class="accessLink">
+          <a href="../../../assets/SDC_Form/SDCAccessRequestForm.pdf" target="_blank" (click)="requestForm()">Access Request Form</a>
+        </span>
       </div>
       <div class="vertical-divider">or</div>
       <div class="col-xs-6 column-two">
@@ -26,3 +28,4 @@
     </div>
   </mat-card>
 </div>
+<a id="MyLink" style="display:none"></a>
