--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -24,10 +24,10 @@
         <ng-template ngFor let-stack [ngForOf]="stacks" let-i="index+1">
           <tr>
             <td>{{ i }}</td>
-            <td>{{ stack }}</td>
-            <td> Jupyter Notebook, Python, R Studio </td>
+            <td>{{ stack.stack_name }}</td>
+            <td> {{stack.application}} </td>
             <td>
-              <button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>
+              <button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack.stack_name)">Launch</button>
             </td>
             <td>
               <button class="btn btn-primary dotBtn" [disabled]=true>Stop</button>
