--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -3,12 +3,12 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header col-md-4">
-        <a class="brand-name" style="width: 15%;float: left;margin: 5px 0;">
-          <img style="margin-top: 8px;" class="img-responsive2" src="../assets/images/dot-logo-white.png" alt="Logo">
-        </a>
+        <!--<a class="brand-name" style="width: 15%;float: left;margin: 5px 0;">-->
+          <!--<img style="margin-top: 8px;" class="img-responsive2" src="../assets/images/dot-logo-white.png" alt="Logo">-->
+        <!--</a>-->
         <div style=" float: left;width: 85%;padding: 10px 0px;margin-left: -15px">
-          <span style="font-weight: 700;">U.S. Department of Transportation</span><br/>
-          <span style="font-size: 12px;">Secure Data Commons Platform</span>
+          <!--<span style="font-weight: 700;">U.S. Department of Transportation</span><br/>-->
+          <span class="logo">Secure Data Commons Platform</span>
         </div>
       </div>
 
@@ -34,11 +34,11 @@
   <div class="container-fluid">
     <div class="row padding-top-lg">
       <div id="footerInfo" class="padding-top-sm">
-        <div class="footerLogo">
-          <img src="../assets/images/dot-logo-white.png" alt="DOT Logo" style="margin-top: 25px;">
-          <span style="font-weight: 700;font-size: 14px">U.S. Department of Transportation</span>
-        </div>
-        <p class="font-13" style="margin-top: -18px;margin-left: 8px;">Secure Data Commons Platform</p>
+        <!--<div class="footerLogo">-->
+          <!--<img src="../assets/images/dot-logo-white.png" alt="DOT Logo" style="margin-top: 25px;">-->
+          <!--<span style="font-weight: 700;font-size: 14px">U.S. Department of Transportation</span>-->
+        <!--</div>-->
+        <p class="logo">Secure Data Commons Platform</p>
         <p class="font-13">The SDC platform was created as a prototype as part of a U.S. DOT research project under contract number DTFH6116D00052 / Task 12</p>
       </div>
       </div>
