--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -9,13 +9,13 @@
 <div class="container">
   <mat-card>
     <div class="row">
-      <h3>My Datasets</h3>
+      <h3>My Workstations</h3>
       <table class="table">
         <thead class="thead-inverse">
         <tr>
           <th>#</th>
           <th>Stack Name</th>
-          <th>Description</th>
+          <th>Applications</th>
           <th></th>
           <th></th>
         </tr>
